# arthroprod

./: Cargo.toml  README.md  rustfmt.toml
src/: algebra.rs  calcfile.rs  config.rs  consts.rs  error.rs  lib.rs  macros.rs  main.rs  ops.rs  prelude.rs  types.rs  utils.rs
src/_old/: algebra.rs  config.rs  lib.rs
src/_old/types/: pair.rs  xi.rs
src/algebra/: mod.rs
src/algebra/differentials/: ar_differential.rs  mod.rs
src/algebra/operations/: ar.rs  ar_product.rs  diamond.rs  division.rs  dual.rs  full.rs  full_product.rs  hermitian.rs  mod.rs  project.rs  reverse.rs
src/algebra/types/: alpha.rs  enums.rs  magnitude.rs  mod.rs  multivector.rs  ratio.rs  term.rs  xi.rs
src/types/: alpha.rs  component.rs  index.rs  mod.rs  mvec.rs  pair.rs  sign.rs
