[package]
version = "0.1.3"
name = "arthroprod"
authors = ["Innes Anderson-Morrison <innesdmorrison@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/sminez/arthroprod"
documentation = "https://docs.rs/arthroprod"
readme = "README.md"
description = """
Clifford Algebra based computation for the theory of Absolute Relativity.
"""

[[bin]]
doc = false
name = "aprod"
path = "src/bin/main.rs"

[dependencies]
lazy_static = "0.2"
getopts = "0.2"

[dev-dependencies]
proptest = "0.3.1"
